# gemcaps

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.gmi  README.md  cert.pem  conf.toml  gsgi.gmi  inf_req.sh  key.pem  readme.md  valgrind.txt
example/: cert.pem  conf.toml  conf.yml  key.pem  mime-types.toml  req.conf
example/capsules/: example.toml  files.yml
example/files/: index.gmi
example/files/test/: test.gmi
example/files/test/cgi/: index.py
example/handlers/: files.yml
example/servers/: main.yml
includes/: MimeTypes.h  cache.hpp  context.hpp  filehandler.hpp  files.h  gemini.h  glob.hpp  gsgi.h  gsgihander.hpp  handler.hpp  loader.hpp  main.hpp  manager.hpp  params.hpp  re.hpp  server.h  server.hpp  settings.hpp  wsgi.h
shared/: handler.hpp  server.hpp  util.hpp  uvutils.hpp
shared/gemcaps/: MimeTypes.h  executor.hpp  handler.hpp  log.hpp  pathutils.hpp  server.hpp  settings.hpp  stringutil.hpp  util.hpp  uvutils.hpp
sources/: MimeTypes.cpp  cache.cpp  context.cpp  executor.cpp  filehandler.cpp  gemini.c  glob.cpp  gsgi.c  gsgihandler.cpp  loader.cpp  log.cpp  main.c  main.cpp  manager.cpp  params.cpp  pathutils.cpp  re.cpp  server.c  server.cpp  settings.cpp  util.cpp  uvutils.cpp  wsgi.c
src/: cache.rs  capsule.rs  certsni.rs  config.rs  error.rs  files.rs  gemini.rs  glob.rs  log.rs  main.rs  pathutil.rs  pem.rs  runner.rs  server.rs  settings.rs  tls.rs
src/capsule/: cgi.rs  file.rs  files.rs  redirect.rs
src/config/: cgi.rs  file.rs  proxy.rs  redirect.rs
src/tls/: acceptor.rs  buffer.rs  connection.rs
test/: CMakeLists.txt  test_gemini_request.cpp  test_params.cpp  test_pathutils.cpp  test_stringutil.cpp  test_util.cpp
