[package]
name = "gemcaps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
rustls-pemfile = "0.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"