[package]
name = "gemcaps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["full"] }
futures = "0.3"
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "1.0"
bytes = "1.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2", features = ["derive"] }
regex = "1.6"
async-trait = "0.1"
lazy_static = "1.4"
